# z-loader

./: .gitignore  Cargo.toml
.cargo/: config.toml
api/bridge/: Cargo.toml
api/bridge/src/: compat.rs  lazy.rs  lib.rs  props.rs
api/lsposed-loader/: Cargo.toml  Makefile.toml  build.rs
api/lsposed-loader/module/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
api/lsposed-loader/src/: abi.rs  api.rs  dlfcn.rs  filter.rs  lib.rs  logs.rs
api/zygisk-compat/: Cargo.toml  Makefile.toml  README.md
api/zygisk-compat/module/: module.prop  post-fs-data.sh
api/zygisk-compat/src/: abi.rs  api.rs  common.rs  daemon.rs  dlfcn.rs  lib.rs  logs.rs  selinux.rs
common/: Cargo.toml
common/src/: lazy.rs  lib.rs  zygote.rs
loader/common/: Cargo.toml
loader/common/src/: lib.rs
loader/ebpf/: Cargo.toml  rust-toolchain.toml
loader/ebpf/src/: main.rs
loader/userspace/: Cargo.toml
loader/userspace/src/: bridge.rs  inject.rs  loader.rs  macros.rs  main.rs  monitor.rs  symbols.rs
loader/userspace/src/denylist/: mod.rs
loader/userspace/src/loader/: mod.rs  symbols.rs
xbuild/: Cargo.toml
xbuild/src/: adb.rs  args.rs  build.rs  ext.rs  main.rs  run.rs
xbuild/src/deploy/: mod.rs
zygisk/: Cargo.toml
zygisk/.cargo/: config.toml
zygisk/src/: bridge.rs  lib.rs
