[package]
name = "lsposed-loader"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.13"
anyhow = "1"
bridge = { path = "../bridge" }
common = { path = "../../common" }
fragile = "2.0"
jni-sys = "0.4"
libc = "0.2"
log = "0.4.21"
memfd = "0.6"
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }

[build-dependencies]
glob = "0.3.1"
