[package]
name = "zloader-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
ebpf-common = { path = "../common" }
log = "0.4.20"
seq-macro = "0.3"

[[bin]]
name = "zloader-ebpf"
path = "src/main.rs"

[profile.dev]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"

rpath = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
