[package]
name = "loader"
version = "0.0.0"
edition = "2021"

[dependencies]
android_logger = "0.13"
anyhow = "1"
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
env_logger = "0.11"
log = "0.4"
lzma-rs = "0.3"
nix = { version = "0.28", features = ["fs", "resource", "process", "signal", "uio"] }
object = "0.34"
rsprocmaps = "0.3"
tokio = { version = "1.36", features = ["full"] }
common = { path = "../common" }

[[bin]]
name = "zloader"
path = "src/main.rs"
